--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,10 @@
 <resources>
     <string name="app_name">Elimin8</string>
 
+    <string name="placeholder_text">Lorem ipsum dolor sit amet consectur adpiscing elit</string>
+
+    <string name="quick_facts">In almost all cases, autoimmune diseases can be traced back to a leaky gut.</string>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
